# spectrum-analyzer

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  EDUCATIONAL.md  LICENSE  README.md  check-build.sh  flake.nix  rust-toolchain.toml  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
benches/: fft_spectrum_bench.rs
examples/: bench.rs  live-spectrum-visualization.rs  live-visualization.rs  live_visualization.rs  minimal.rs  mp3-sample-high-hat.rs  mp3-samples.rs
src/: error.rs  fft.rs  frequency.rs  lib.rs  limit.rs  scaling.rs  spectrum.rs  util.rs  windows.rs
src/fft/: microfft_complex.rs  microfft_real.rs  mod.rs  no_std.rs  rustfft_complex.rs
src/tests/: mod.rs  sine.rs
