[package]
name = "spectrum-analyzer"
description = """
An easy to use and fast `no_std` library (with `alloc`) to get the frequency
spectrum of a digital signal (e.g. audio) using FFT.
"""
version = "1.6.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2021"
keywords = ["fft", "spectrum", "frequencies", "audio", "dsp"]
categories = ["multimedia", "no-std"]
rust-version = "1.63" # MSRV of base library, not examples and benchmarks
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/spectrum-analyzer"
repository = "https://github.com/phip1611/spectrum-analyzer"
documentation = "https://docs.rs/spectrum-analyzer"
exclude = [
    "res",
    "test",
    ".github"
]

[[bench]]
name = "fft_spectrum_bench"
harness = false

[dependencies]
float-cmp = "~0.10.0"
libm = "~0.2.15"
microfft = { version = "~0.6.0", features = ["size-32768"] }
paste = "~1.0.15"

[dev-dependencies]
audio-visualizer = "~0.5.0"
symphonia = { version = "0.5.4", default-features = false, features = ["mp3"] }

# Additional dependencies for: benchmarks
criterion = "~0.5.1"
rand = "0.9.1"


# Faster code in tests, otherwise FFT is too slow
[profile.dev]
#opt-level = 1
